--- a/src/DocumentEditor/imports/doc-editor-default-styles.scss
+++ b/src/DocumentEditor/imports/doc-editor-default-styles.scss
@@ -9,7 +9,7 @@
     height: 16px;
   }
 
-  ::-webkit-scrollbar-track {
+  ::-webkit-scrollbar-track, ::-webkit-scrollbar-corner {
     display: none;
   }
 
