fix: v-deep/color-adjust warnings + devDep upgrade

--- a/src/DocumentEditor/imports/doc-editor-default-styles.scss
+++ b/src/DocumentEditor/imports/doc-editor-default-styles.scss
@@ -1,4 +1,4 @@
-::v-deep.editor {
+.editor ::v-deep() {
   display: block;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
